@@ -1,3 +1,7 @@
+2015-11-25  Nik Nyby  <nnyby@columbia.edu>
+
+	* Moved init code out of common code.
+
 2015-11-13  Nik Nyby  <nnyby@columbia.edu>
 
 	* Moved browser-independent extension code into src/common.
